// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateWorkspace while the workspace is pending creation rejects security sensitive fields 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "PERMISSION_DENIED",
    "userFriendlyMessage": "These fields cannot be updated before the workspace is activated: allowImpersonation.",
  },
  "message": "Entity performing the request does not have permission",
  "name": "ForbiddenError",
}
`;

exports[`updateWorkspace while the workspace is pending creation rejects the whole update when a setup field is mixed with a security sensitive one 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "PERMISSION_DENIED",
    "userFriendlyMessage": "These fields cannot be updated before the workspace is activated: isPublicInviteLinkEnabled.",
  },
  "message": "Entity performing the request does not have permission",
  "name": "ForbiddenError",
}
`;
